--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,42 @@
-alabaster==0.7.12
-Babel==2.11.0
-beautifulsoup4==4.11.1
-certifi==2022.9.24
-charset-normalizer==2.1.1
+accessible-pygments==0.0.3
+alabaster==0.7.13
+Babel==2.12.1
+beautifulsoup4==4.11.2
+certifi==2022.12.7
+charset-normalizer==3.0.1
 colorama==0.4.6
-docutils==0.17.1
-gitdb==4.0.10
-GitPython==3.1.29
+docutils==0.19
 idna==3.4
 imagesize==1.4.1
-importlib-metadata==5.1.0
 Jinja2==3.1.2
 latexcodec==2.0.1
 livereload==2.6.3
-MarkupSafe==2.1.1
-packaging==21.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+mdit-py-plugins==0.3.4
+mdurl==0.1.2
+myst-parser==0.19.1
+packaging==23.0
 pybtex==0.24.0
 pybtex-docutils==1.0.2
-pydata-sphinx-theme==0.8.1
-Pygments==2.13.0
-pyparsing==3.0.9
-pytz==2022.6
+pydata-sphinx-theme==0.13.0
+Pygments==2.14.0
 PyYAML==6.0
-requests==2.28.1
+requests==2.28.2
 six==1.16.0
-smmap==5.0.0
 snowballstemmer==2.2.0
-soupsieve==2.3.2.post1
-Sphinx==4.5.0
+soupsieve==2.4
+Sphinx==5.3.0
 sphinx-autobuild==2021.3.14
-sphinx-book-theme==0.3.3
+sphinx-book-theme==1.0.0
 sphinx-copybutton==0.5.1
-sphinx-git==11.0.0
-sphinxcontrib-applehelp==1.0.2
+sphinx_design==0.3.0
+sphinxcontrib-applehelp==1.0.4
 sphinxcontrib-bibtex==2.5.0
 sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-htmlhelp==2.0.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
-sphinxcontrib.asciinema==0.3.5
 tornado==6.2
-urllib3==1.26.13
-zipp==3.11.0
+urllib3==1.26.14
